[package]
name = "transmitproxy"
version = "0.1.0"
authors = ["fredrik"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.release]
overflow-checks = true
debug-assertions = false
lto = true
incremental = false
panic = "abort"
opt-level = 'z'  # Optimize for size.
codegen-units = 4

